--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wemo-client": "^0.11.0"
+    "wemo-client": "^0.11.0",
     "i2c-lcd": "^1.0.2"
   }
 }
