--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "wemo",
+  "name": "Home Automation",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Experiment with RPi3 GPIO, 4x20 LCD display & Wemo",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Jean-Philippe Blais <jphblais@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "wemo-client": "^0.11.0",
-    "i2c-lcd": "^1.0.2"
+    "i2c-lcd": "^1.0.2",
+    "onoff": "^2.17.1",
+    "moment": "^2.17.1",
+    "wemo-client": "^0.11.0"
   }
 }
